# gha_create_release_test

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  deps.bzl
.github/workflows/: ci.yml
release/: BUILD.bazel  workspace_snippet.tmpl
tests/: BUILD.bazel
