load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@cgrindel_bazel_starlib//bzlformat:defs.bzl", "bzlformat_pkg")

bzlformat_pkg(name = "bzlformat")

build_test(
    name = "build_test",
    targets = [
        "//:deps",
        "//release:generate_workspace_snippet",
        "//release:generate_release_notes",
        "//release:update_readme",
        "//release:create",
    ],
)
